Progress on tutorial

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,6 +3,6 @@
 	<a href="/about/">About</a>
 	<a href="/blog/">Blog</a>
 
-	<h2>About</h2>
-	<p>This is an about page</p>
+	<h2>Blog</h2>
+	<p>This is the blog page</p>
 </body>
